[gd_scene load_steps=22 format=2]

[ext_resource path="res://art/TruckShip/TruckShipTexture_Emission.jpg" type="Texture" id=1]
[ext_resource path="res://Player/Player3d.gd" type="Script" id=2]
[ext_resource path="res://Player/States/TowingState.gd" type="Script" id=3]
[ext_resource path="res://Player/States/EmptyState.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://art/TruckShip/TruckShipTexture_Roughness.jpg" type="Texture" id=6]
[ext_resource path="res://art/TruckShip/TruckShipTexture_Normal.jpg" type="Texture" id=7]
[ext_resource path="res://art/TruckShip/TruckShipTexture_Albedo.jpg" type="Texture" id=8]
[ext_resource path="res://art/TruckShip/TruckShip.obj" type="ArrayMesh" id=9]
[ext_resource path="res://art/TruckShip/TruckShip_Crane.obj" type="ArrayMesh" id=10]
[ext_resource path="res://art/TruckShip/TruckShip_Crane_Albedo.jpg" type="Texture" id=11]
[ext_resource path="res://art/TruckShip/TruckShip_Engine.obj" type="ArrayMesh" id=12]
[ext_resource path="res://art/TruckShip/TruckShip_Engine_Material.material" type="Material" id=13]
[ext_resource path="res://art/Particles/EngineSmokeParticle.tres" type="Material" id=14]

[sub_resource type="CapsuleShape" id=1]
radius = 4.02061
height = 4.62129

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 8 )
roughness_texture = ExtResource( 6 )
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 1.0
emission_operator = 1
emission_on_uv2 = false
emission_texture = ExtResource( 1 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 7 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 11 )

[sub_resource type="SphereMesh" id=8]
radius = 0.5
height = 1.0
radial_segments = 8
rings = 4

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0.425 ), 0.0, 0.0, 0, 0, Vector2( 0.318801, 0.579545 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0521306, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.162791, 0.311047, 1 )
colors = PoolColorArray( 0, 0.929688, 1, 1, 0, 1, 0.273438, 1, 0.00250244, 0.320313, 0, 1, 1, 1, 1, 1 )

[sub_resource type="Curve3D" id=7]
_data = {
"points": PoolVector3Array(  ),
"tilts": PoolRealArray(  )
}

[node name="Player" type="KinematicBody"]
collision/safe_margin = 0.005
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="ShipMesh" type="Spatial" parent="."]

[node name="MainBody" type="MeshInstance" parent="ShipMesh"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0 )
mesh = ExtResource( 9 )
material/0 = SubResource( 2 )

[node name="Crane" type="MeshInstance" parent="ShipMesh"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 2.76861, 2.77199 )
mesh = ExtResource( 10 )
material/0 = SubResource( 3 )

[node name="Engines" type="Spatial" parent="ShipMesh"]

[node name="Engine_Back1" type="MeshInstance" parent="ShipMesh/Engines"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, -2.49213, 0.450202, 4.04845 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 13 )

[node name="EngineSmoke" type="CPUParticles" parent="ShipMesh/Engines/Engine_Back1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.746829 )
material_override = ExtResource( 14 )
amount = 128
lifetime = 0.5
explosiveness = 0.2
randomness = 0.02
local_coords = false
mesh = SubResource( 8 )
direction = Vector3( 0, 0, 1 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 50.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )

[node name="Engine_Back2" type="MeshInstance" parent="ShipMesh/Engines"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 2.492, 0.45, 4.048 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 13 )

[node name="EngineSmoke2" type="CPUParticles" parent="ShipMesh/Engines/Engine_Back2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.746829 )
material_override = ExtResource( 14 )
amount = 128
lifetime = 0.5
explosiveness = 0.1
local_coords = false
mesh = SubResource( 8 )
direction = Vector3( 0, 0, 1 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 50.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Engine_Front1" type="MeshInstance" parent="ShipMesh/Engines"]
transform = Transform( 2.45746, 0, -1.72073, 0, 3, 0, 1.72073, 0, 2.45746, -2, 0.00973618, -4 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 13 )

[node name="EngineSmoke3" type="CPUParticles" parent="ShipMesh/Engines/Engine_Front1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.746829 )
material_override = ExtResource( 14 )
amount = 128
lifetime = 0.5
explosiveness = 0.1
local_coords = false
mesh = SubResource( 8 )
direction = Vector3( 0, 0, 1 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 50.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="Engine_Front2" type="MeshInstance" parent="ShipMesh/Engines"]
transform = Transform( 2.45746, 0, 1.72073, 0, 3, 0, -1.72073, 0, 2.45746, 2, 0.00973618, -4 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 13 )

[node name="EngineSmoke4" type="CPUParticles" parent="ShipMesh/Engines/Engine_Front2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.746829 )
material_override = ExtResource( 14 )
amount = 128
lifetime = 0.5
explosiveness = 0.1
local_coords = false
mesh = SubResource( 8 )
direction = Vector3( 0, 0, 1 )
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 50.0
scale_amount = 2.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 5 )
color_ramp = SubResource( 6 )
__meta__ = {
"_editor_description_": ""
}

[node name="StateMachine" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="EmptyState" type="Spatial" parent="StateMachine"]
script = ExtResource( 4 )
stateType = "empty"
isDefault = true

[node name="TowingState" type="Spatial" parent="StateMachine"]
script = ExtResource( 3 )
stateType = "towing"

[node name="Path" type="Path" parent="StateMachine/TowingState"]
curve = SubResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/TowingState"]
process_mode = 0
wait_time = 0.1

[node name="SecondaryTimer" type="Timer" parent="StateMachine/TowingState"]
process_mode = 0
wait_time = 0.1

[connection signal="timeout" from="StateMachine/TowingState/Timer" to="StateMachine/TowingState" method="SpawnMovingResource"]
[connection signal="timeout" from="StateMachine/TowingState/SecondaryTimer" to="StateMachine/TowingState" method="PerformSecondaryAction"]
